--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-
-
-
-    
+    <h1>TITULO</h1>
+    <h2>SUBTITULO</h2>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui unde quidem voluptatum est non? Iste aperiam nisi recusandae illum aliquid dolores, explicabo mollitia quae facilis nobis illo molestias. Facilis, inventore.
+    </p>
+    <ol>
+        <li>Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+    </ol>
+    <a href="https://www.youtube.com" target="_blank" title="YouTube">asdfas</a>
+    <img src="" alt="ps una imagen">
 </body>
 </html>
 
