--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
     </ol>
     <a href="https://www.youtube.com" target="_blank" title="YouTube">asdfas</a>
     <img src="" alt="ps una imagen">
+    <br><br>
+    <form action="">
+        <input type="text" required minlength="3" name="username" placeholder="Escribe tu nombre">
+        <input type="email" name="" id="">
+        <input type="password" name="" id="">
+        <input type="checkbox" name="" id="">
+        <input type="radio" name="" id="">
+        <input type="file" name="" id="">
+        <input type="date" name="" id="">
+        <input type="submit" value="enviar">
+    </form>
 </body>
 </html>
 
